fix navbar collapse animation stutter

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -137,22 +137,17 @@
 			right: 0 !important;
 			width: 100%;
 			text-align: left;
-			.show {
-				width: 100%;
-				background-color: $dark-opa;
-			}
 		}
 		.navbar-toggler {
 			height: 5.3rem;
 		}
+		.navbar-nav {
+			padding-bottom: 2rem;
+			background: $dark-opa;
+		}
 		.nav-link {
 			margin-left: 2rem !important;
 		}
-	}
-
-	.navbar-collapse {
-		background: $dark-opa;
-		padding-bottom: 2rem;
 	}
 
 	#icons {
@@ -196,6 +191,10 @@
 	@media (max-width: 1199.98px) {
 		.nav-link {
 			margin-left: 2rem !important;
+		}
+		.navbar-nav {
+			padding-bottom: 2rem;
+			background: $dark-opa;
 		}
 	}
 }
