--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,20 +168,15 @@ section {
     width: 100%;
     text-align: left;
   }
-  .nav-center #nav-menu .show {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6274509804);
-  }
   .nav-center .navbar-toggler {
     height: 5.3rem;
   }
+  .nav-center .navbar-nav {
+    padding-bottom: 2rem;
+    background: rgba(0, 0, 0, 0.6274509804);
+  }
   .nav-center .nav-link {
     margin-left: 2rem !important;
-  }
-
-  .navbar-collapse {
-    background: rgba(0, 0, 0, 0.6274509804);
-    padding-bottom: 2rem;
   }
 
   #icons {
@@ -217,6 +212,10 @@ section {
 @media (max-width: 1199.98px) {
   .nav-top .nav-link {
     margin-left: 2rem !important;
+  }
+  .nav-top .navbar-nav {
+    padding-bottom: 2rem;
+    background: rgba(0, 0, 0, 0.6274509804);
   }
 }
 
